# StellPoker

./: .env.example  .env.staging.example  .gitignore  DATABASE_BACKUP.md  PROJECT.md  README.md  SECURITY_SCANNING.md  docker-compose.staging.yml  docker-compose.yml
.github/workflows/: ci.yml
app/: Dockerfile  package-lock.json  package.json
app/src/app/: globals.css
app/src/components/: GameBoyModal.tsx  HandHistoryPanel.tsx  PixelCat.tsx  PixelWorld.tsx  PlayerSeat.tsx  ProofExplorer.tsx  Table.tsx
app/src/lib/: api.ts  explorer.ts  use-notifications.ts
circuits/deal_valid/: Nargo.toml  Prover.toml
circuits/deal_valid/src/: main.nr
circuits/lib/src/: merkle.nr
circuits/showdown_valid/src/: main.nr
contracts/committee-registry/src/: lib.rs
contracts/poker-table/src/: betting.rs  game.rs  game_hub.rs  invariants_test.rs  lib.rs  pot.rs  test.rs  types.rs  verifier.rs
contracts/zk-verifier/src/: lib.rs
docs/: frontend-state-management.md  soroban-rpc-node.md  staging-environment.md
infrastructure/: DEPLOYMENT.md  README.md
infrastructure/helm/: README.md
infrastructure/helm/coordinator/: Chart.yaml  (+1 more)
scripts/: backup-coordinator-db.sh  deploy-local.sh  deploy-staging.sh  deploy.sh  run-staging-checks.sh  scan-docker-images.sh  test-flow.py
services/coordinator/: Cargo.toml
services/coordinator/src/: main.rs  middleware.rs  session_gc.rs
services/coordinator/src/api/: admin.rs  mod.rs  parsing.rs
services/coordinator/src/soroban/: actions.rs  proofs.rs
stellar-zk-cards/: Cargo.toml
stellar-zk-cards/src/: lib.rs
tests/: README.md
(+65 files in other folders)
