[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower = { version = "0.4", features = ["util"] }
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
base64 = "0.22"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
ark-ff = "0.4"
ark-bn254 = "0.4"
hex = "0.4"
ed25519-dalek = "2.2"
stellar-strkey = "0.0.13"
sha2 = "0.10"
